# dogfood

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  connector.md  failure-mode.md  question.md  scenario.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml  railway.toml
apps/api/app/: __init__.py  main.py
apps/api/app/models/: __init__.py  dogfood.py
apps/api/app/routers/: __init__.py  health.py  runs.py  scenarios.py
apps/api/app/seeds/: __init__.py  scenarios.py  self_scenarios.py
apps/api/app/services/: __init__.py  run_store.py  runner.py
apps/web/: package.json  tailwind.config.ts  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/leaderboard/: page.tsx
apps/web/app/r/[publicId]/: findings-list.tsx  page.tsx  share-actions.tsx
apps/web/app/r/[publicId]/og/: route.tsx
apps/web/app/run/: page.tsx
apps/web/app/scenarios/: page.tsx
apps/web/app/scenarios/[slug]/: page.tsx
apps/web/components/: nav.tsx
apps/web/lib/: failure-modes.ts
docs/connectors/: ADD-A-CONNECTOR.md
docs/scenarios/: CONTRIBUTING-A-SCENARIO.md  _template.yaml
scripts/: capture-frame.ts  demo-90s.ts  fetch-hn-posts.ts  render-gif.ts  render-thumbnail.ts  run-scenario.ts  self-eval.ts
scripts/demo/: index.html
scripts/thumbnail/: index.html
