[project]
name = "dogfood-api"
version = "0.1.0"
description = "Dogfood — FastAPI backend for stress-testing AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "websockets>=13.0",
    "pydantic>=2.9",
    "supabase>=2.6",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100
